# Josh_Sid_ACS

./: CMakeLists.txt  README.md
FinalProject/: CustomKeyValues.h  DefaultSerializer.h  KeyValueStore.h  README.md  deserialize_test.cpp  kvstore_test.cpp
Project1/: Project1.md  custom_matrix.c  helper_functions.c  helper_functions.h  mat_mult_naive.c  mat_mult_simd.c  matrix_multiply.c  matrix_multiply.h  test_float_multiply.c  test_multiply.py  test_short_multiply.c
Project2/: README.md  collect_data.sh  compression.c  create_threads.c
Project3/: README.md  fio_32k_read  fio_32k_read_single  fio_32k_rw  fio_32k_write  fio_32k_write_single  fio_4k_read  fio_4k_rw  fio_4k_write  fio_jobs  gen_data_fio.sh  gen_plots.sh  iops_read_out.txt  iops_write_out.txt  plot.py  read_32k.txt  read_4k.txt  rw_32k.txt  rw_4k.txt  write_32k.txt  write_32k.txt_bak  write_4k.txt  write_4k.txt.bak
Project4/: README.md  collect_encode_data.sh  decode.cpp  encode.cpp  encode_out_single_threaded.csv  encode_out_threads.csv  gen_input_file.py  out_small.txt
